grammar.txt
statement        = select_statement;
select_statement = SELECT columns FROM db [WHERE cond];
columns          = STAR | column {COMMA column};
column           = ID;
db               = ID;
cond             = (val | column) IN (val | column) | (val | column) EQUALS (val | column)  
                 | cond OR cond | cond AND cond;
string           = STRING | ID;
assign		 = SET ID val
val              = string | number
number           = INT | ID
func_def         = DEFUN ID COLON [ID {COMMA ID}] ARROW statement
func_call        = ID LPAREN [ID {COMMA ID}] RPAREN
